Fix the theme button z-index

--- a/assets/css/components/theme-button.css
+++ b/assets/css/components/theme-button.css
@@ -2,6 +2,7 @@
 	position: fixed;
 	inset-block-end: 1em;
 	inset-inline-end: 1em;
+	z-index: 100;
 }
 
 .ThemeButton[aria-pressed="false"] > .ThemeButton__icon:not([data-theme="light"]),
